OpenJMLTest/test/gitbug499/expected
test\gitbug499\Interval.java:43: error: Expected a declaration or a JML construct inside the JML annotation here
            //@ contains(i);
                ^
test\gitbug499\Interval.java:64: error: illegal start of type
        //@ !contains(i);
            ^
test\gitbug499\Interval.java:64: error: ';' expected
        //@ !contains(i);
             ^
test\gitbug499\Interval.java:64: error: illegal start of type
        //@ !contains(i);
                     ^
test\gitbug499\Interval.java:64: error: ';' expected
        //@ !contains(i);
                       ^
test\gitbug499\Interval.java:67: error: class, interface, or enum expected
    public /*@ pure @*/ int size() {
                        ^
test\gitbug499\Interval.java:69: error: class, interface, or enum expected
    }
    ^
Continuing bravely despite parsing errors
Operation not performed because of parse or type errors
7 errors
